implemented changes according to review